--- a/Cyberpunk.theme.css
+++ b/Cyberpunk.theme.css
@@ -6,7 +6,7 @@
  * @description 🤖 Cyberpunk theme for BetterDiscord
 **/
 
-@import url("https://bdsources.github.io/sourcecheck/code.css"); /* Cucks BetterDocs/DiscordSource downloads. Fuck you. */
+@import url("https://bdsources.github.io/sourcecheck/code.css"); /* Insert phrase demeaning external plugin/theme website here. */
 
 @font-face {
  font-family:BlenderProBold;
