--- a/Cyberpunk.theme.css
+++ b/Cyberpunk.theme.css
@@ -1606,7 +1606,7 @@ strong {
 .colorDefault-2K3EoJ:active:not(.hideInteraction-1iHO1O),
 .colorDefault-2K3EoJ.focused-3afm-j,
 .activity-11LB_k {
-  background: var(--color-high);
+  background: var(--color-low);
 }
 
 .barInner-3NDaY_ {
